fix: select disable, scrollbar hide

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,12 @@ body {
     font-weight: 400;
     overflow-x: hidden;
     scroll-behavior: smooth;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /*
     /* background-color: #00d5ff !important; */
 }
 
@@ -48,7 +54,8 @@ a:focus {
     color: white !important;
 }
 
-.disabled-button, .disabled-button:hover {
+.disabled-button,
+.disabled-button:hover {
     background-color: gray !important;
     color: black !important;
     cursor: not-allowed !important;
@@ -77,7 +84,7 @@ a:focus {
 }
 
 a:hover {
-    color: #00d5ff !important
+    color: #00d5ff !important;
 }
 
 h1,
@@ -112,6 +119,14 @@ h6 {
     justify-content: center;
 }
 
+/* SCROLLBAR */
+
+/* width */
+::-webkit-scrollbar,
+::-moz-scrollbar {
+    display: none;
+}
+
 /* FONT SIZES*/
 
 @media only screen and (min-width: 1920px) {
@@ -137,4 +152,3 @@ h6 {
         justify-content: flex-start !important;
     }
 }
-
